@@ -16,6 +16,7 @@ I put it on Links Tab. On this site you can create Python/Tkinter GUIs
 and then download the code. Wish I had this years ago... -.-
 
 
+#ADDED# Installer uses now APT in a background process 
 #ADDED# High Quality Welcome Tab Background
 #ADDED# XFCE Options are disabled when using other desktop
 #ADDED# Gparted & Neofetch Button disabled when not installed
